--- a/index.html
+++ b/index.html
@@ -8,19 +8,39 @@
 </head>
 <body>
     <header>
-        <nav></nav>
+        <nav>
+            <img src="./svg/BurgerMenu.svg" alt="">
+        </nav>
         <h1>Learn it all</h1>
         <button>Aprendidas</button>
     </header>
     <main>
-        <div>
-            <div>
-                <h3>Agigolado</h3>
-                <p>falta el aire al realizar un esfuerzo, que se ahoga y tiene una presión en el pecho</p>
-            </div>
+        <div class="slot slot-ocupado">
+            <h3>Agigolado</h3>
+            <p>falta el aire al realizar un esfuerzo, que se ahoga y tiene una presión en el pecho</p>
         </div>
-        <div>
-            añadir nuevo
+        <div class="slot slot-en-espera">
+            <h3>Agigolado</h3>
+            <p>falta el aire al realizar un esfuerzo, que se ahoga y tiene una presión en el pecho</p>
+        </div>
+        <div class="slot slot-disponible">
+            <h3>Lugar Disponible</h3>
+            <p>Inserta un nuevo concepto a aprender</p>
+        </div>
+        <div class="slot slot-disponible">
+            <h3>Lugar Disponible</h3>
+            <p>Inserta un nuevo concepto a aprender</p>
+        </div>
+        <div class="slot slot-premium">
+            <h3>Obtener Lugar</h3>
+            <p>Comparte la aplicación o adquiere más lugares</p>
+        </div>
+        <div class="slot slot-premium">
+            <h3>Obtener Lugar</h3>
+            <p>Comparte la aplicación o adquiere más lugares</p>
+        </div>
+        <div id="btn-add">
+            <img src="./svg/mas.svg" alt="">
         </div>
     </main>
 </body>
