ahora se puede eliminar palabras guardadas con una estetica fea

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <form id="fromNewConcept" action="" method="post">
             <div class="contenedor-label">
                 <label for="titleConcepto">Concepto</label>
-                <input type="text" name="titleConcepto" id="titleConcepto" placeholder="Ingresa tu palabra o concepto">
+                <input type="text" name="titleConcepto" id="titleConcepto" placeholder="Ingresa tu palabra o concepto" required>
             </div>
             <div class="contenedor-label">
                 <label for="descripConcepto">Descripción</label>
