--- a/index.html
+++ b/index.html
@@ -15,14 +15,20 @@
         <button>Aprendidas</button>
     </header>
     <main>
-        <!-- 
+        
         <div class="slot slot-ocupado">
             <h3>Agigolado</h3>
             <p>falta el aire al realizar un esfuerzo, que se ahoga y tiene una presión en el pecho</p>
+            <button class="deleteConcepto">
+                <img src="./svg/mas.svg" alt="eliminar concepto">
+            </button>
         </div>
         <div class="slot slot-en-espera">
             <h3>Agigolado</h3>
             <p>falta el aire al realizar un esfuerzo, que se ahoga y tiene una presión en el pecho falta el aire al realizar un esfuerzo, que se ahoga y tiene una presión en el pecho falta el aire al realizar un esfuerzo, que se ahoga y tiene una presión en el pecho</p>
+            <button class="deleteConcepto">
+                <img src="./svg/mas.svg" alt="eliminar concepto">
+            </button>
         </div>
         <div class="slot slot-disponible">
             <h3>Lugar Disponible</h3>
@@ -32,7 +38,7 @@
             <h3>Obtener Lugar</h3>
             <p>Comparte la aplicación o adquiere más lugares</p>
         </div>
-        -->
+
     </main>
     <div id="btn-add" onclick="openModal()">
         <img src="./svg/mas.svg" alt="">
@@ -56,5 +62,5 @@
         </div>
     </dialog>
 </body>
-<script src="script.js"></script>
+<script src="tarjetasEnPantalla.js"></script>
 </html>
