ahora tiene un Service Worker que habilita para que la app corra totalmente offline

--- a/index.html
+++ b/index.html
@@ -61,4 +61,5 @@
     </dialog>
 </body>
 <script src="tarjetasEnPantalla.js"></script>
+<script src="registradorServiceWorker.js"></script>
 </html>
