Docs(estudioSW): Se añaden los archivos de practica

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <button>Aprendidas</button>
     </header>
     <main>
+        <!--
         <div class="slot slot-ocupado">
             <h3>Agigolado</h3>
             <p>falta el aire al realizar un esfuerzo, que se ahoga y tiene una presión en el pecho</p>
@@ -37,6 +38,7 @@
             <h3>Obtener Lugar</h3>
             <p>Comparte la aplicación o adquiere más lugares</p>
         </div>
+        -->
     </main>
     <div id="btn-add" onclick="openModal()">
         <img src="./svg/mas.svg" alt="">
@@ -61,5 +63,8 @@
     </dialog>
 </body>
 <script src="tarjetasEnPantalla.js"></script>
-<script src="registradorServiceWorker.js"></script>
+<!-- <script src="registradorServiceWorker.js"></script> -->
+<!-- <script src="SW-Registrados.js"></script> -->
+<!-- <script src="notificacionesDesdeBtn.js"></script> -->
+<script src="webDevSimplified.js"></script>
 </html>
