feat(js): Ahora la aplicación pide permiso para enviar notificaciones

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav>
             <img src="./svg/BurgerMenu.svg" alt="">
         </nav>
-        <h1>Learn it all</h1>
+        <h1 onclick="solicitarPermisoNotificaciones()">Learn it all</h1>
         <button>Aprendidas</button>
     </header>
     <main>
@@ -63,8 +63,5 @@
     </dialog>
 </body>
 <script src="tarjetasEnPantalla.js"></script>
-<!-- <script src="registradorServiceWorker.js"></script> -->
-<!-- <script src="SW-Registrados.js"></script> -->
-<!-- <script src="notificacionesDesdeBtn.js"></script> -->
-<script src="webDevSimplified.js"></script>
+<script src="registradorDelSW.js"></script>
 </html>
