feat(js): Se añaden botón para lanzar notificaciones

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav onclick="lanzarNotificacionBienvenida()">
             <img src="./svg/BurgerMenu.svg" alt="">
         </nav>
         <h1 onclick="solicitarPermisoNotificaciones()">Learn it all</h1>
